# Robot-Fling

./: .gitignore  Databaseoverblik.class.violet.html  KastDB.sql  README.md  SystemOverblik.class.violet.html
Client/: ClientGui.pro  ClientGui.pro.user.17b4078  ClientGui.pro.user.5518559  FormManuelStyring.cpp  FormManuelStyring.h  FormManuelStyring.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  clientInfo.cpp  clientInfo.h  main.cpp
Code/: MathJoggling.cpp  main.cpp
Code/CollisionTest/: CMakeLists.txt  CMakeLists.txt.user.1d6b576  ex-collisions2.cpp
Code/CollisionTest (copy)/: CMakeLists.txt  CMakeLists.txt.user.137c33b  CMakeLists.txt.user.1d6b576  DetectCollision.cpp  DetectCollision.h  RobotControl.cpp  RobotControl.h  Throw.h  ex-collisions2.cpp  main.cpp  path.h
Code/RobWork/: CMakeLists.txt  CMakeLists.txt.user.1d6b576.4.8-pre1  CMakeLists.txt.user.1d6b576.4.8-pre1~Stashed changes
Code/RobWork/src/: HelloWorld.cpp  MathJoggling.cpp
Code/Scenes/UR5_2017/: PosRPYParam.xml  ProximitySetup.xml  UR5.xml
Code/Scenes/XMLScenes/RobotOnTable/: Scene.xml
Code/build-CollisionTest (copy)-Desktop-Default/: CMakeCache.txt  ExampleSnippets.cbp  Makefile  cmake_install.cmake
Code/build-CollisionTest (copy)-Desktop-Standard/: CMakeCache.txt  ExampleSnippets.cbp  Makefile  cmake_install.cmake  ex-collisions2
Code/build-CollisionTest (copy)-Imported_Kit_176f56-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  ex-collisions2
Code/build-CollisionTest-Desktop-Default/: CMakeCache.txt  ExampleSnippets.cbp  Makefile  cmake_install.cmake  ex-collisions2
Code/build-RobWork-Desktop-Default/: CMakeCache.txt  HelloWorld  Makefile  MathJoggling  TutorialCollection.cbp  cmake_install.cmake
Code/calibration (copy)/src/: CMakeLists.txt  calibrate2_initialize.cpp  calibrate2_initialize.h  calibrate2_terminate.cpp  calibrate2_types.h  calibration.cpp  rtwtypes.h  svd.cpp  svd.h  xaxpy.cpp  xaxpy.h  xdotc.cpp  xnrm2.cpp  xnrm2.h  xrot.cpp  xrotg.h
Code/calibration (copy)/src/calibrate2/: buildInfo.mat  calibrate2.cpp  calibrate2.h  calibrate2_data.cpp  calibrate2_data.h  calibrate2_initialize.cpp  calibrate2_rtw.mk  calibrate2_terminate.cpp  calibrate2_types.h  codeInfo.mat  compileInfo.mat  gcGuiReport.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rt_nonfinite.cpp  svd.cpp  xaxpy.cpp  xdotc.cpp  xnrm2.cpp  xrot.cpp  xrotg.cpp  xswap.cpp
Code/calibration/build-src-Desktop-Default/: CMakeCache.txt  Makefile  calibration_points.txt  calibration_points2.txt  calibration_pointsFinish.txt  calibration_pointsRunning.txt  cmake_install.cmake  ur_rtde_cmake_example  ur_rtde_cmake_example.cbp
Code/calibration/src/: CMakeLists.txt.user.1d6b576  calibration.cpp
Code/urdt/: Readme
Code/urdt/build-src-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  ur_rtde_cmake_example  ur_rtde_cmake_example.cbp
Code/urdt/src/: CMakeLists.txt  example.cpp  main.cpp
MatLab/: RobotCalibation.m  calibrate.prj  calibrate2.m  calibrate2.prj  calibrateTest.m  untitled.m
MatLab/codegen/lib/calibrate2/: buildInfo.mat  calibrate2.cpp  calibrate2.h  calibrate2_rtw.mk  calibrate2_terminate.h  calibrate2_types.h  calibrateGribber.cpp  calibrateGribber.h  codeInfo.mat  compileInfo.mat  gcGuiReport.mat  rtGetNaN.h  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  svd.cpp  xaxpy.cpp  xdotc.cpp  xdotc.h  xnrm2.cpp  xrot.cpp  xrot.h  xrotg.cpp  xswap.cpp  xswap.h
Scenes/XMLDevices/UR-6-85-5-A/: UR.wc.xml
Scenes/XMLDevices/UR5_2017/: UR5.xml
Scenes/XMLScenes/RobotOnTable/: Scene.xml
Scenes/XMLScenesCelle2/RobotOnTable/: Scene.xml
Scenes/XMLScenesCelle4/RobotOnTable/: Scene.xml
SemesterProjekt/: CMakeLists.txt  CMakeLists.txt.user.137c33b  CMakeLists.txt.user.1d6b576  CMakeLists.txt.user.fc9702f  CMakeLists.txt.user.fde4ce3  DetectCollision.h  Gripper.h  RobotControl.h  Throw.h  calibration.cpp  calibration.h  clientInfo.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  objectdetection.cpp  objectdetection.h  path.h  robot.cpp  robot.h  robotmove.cpp  robotmove.h  showvideo.h  sqlcontroller.cpp  sqlcontroller.h
SerialDev/UR5_2017/: DHParam.xml
SerialDev/UR5_2017/Geometry/: UR.mtl
UR5/: UR1.wc.xml  UR2.wc.xml  UR5.wc.xml  setup.prox.xml
UR5/geometry/: czlon1.STL  czlon2.STL  czlon3.STL  czlon4.STL  czlon5.STL  narzedzie.STL  podstawa.stl
Vision/build-src-Desktop-Default/: CMakeCache.txt  Makefile  Vision  Vision.cbp  cmake_install.cmake
Vision/build-src-Desktop-Standard/: CMakeCache.txt  Makefile  Vision  Vision.cbp  cmake_install.cmake
Vision/src/: CMakeLists.txt  CMakeLists.txt.user.137c33b  CMakeLists.txt.user.d49b957  calibration.cpp  calibration.cpp.autosave  calibration.h  main.cpp  main.cpp.autosave  objectdetection.cpp  objectdetection.h
build-ClientGui-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_MainWindow.h
build-ClientGui-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/debug/: moc_MainWindow.cpp
build-SemesterProjekt-Desktop-Default/: CMakeCache.txt  Makefile  SemesterProjekt  SemesterProjekt.cbp  cmake_install.cmake
build-SemesterProjekt-Desktop-Default/SemesterProjekt_autogen/EWIEGA46WW/: moc_Gripper.cpp  moc_mainwindow.cpp
build-SemesterProjekt-Desktop-Default/SemesterProjekt_autogen/include/: ui_mainwindow.h
build-SemesterProjekt-Desktop-Standard/: CMakeCache.txt  Makefile  SemesterProjekt  SemesterProjekt.cbp  cmake_install.cmake
build-SemesterProjekt-Desktop-Standard/SemesterProjekt_autogen/EWIEGA46WW/: moc_RobotControl.cpp  moc_mainwindow.cpp  moc_showvideo.cpp
build-SemesterProjekt-Desktop-Standard/SemesterProjekt_autogen/include/: ui_mainwindow.h
build-SemesterProjekt-Imported_Kit_176f56-Default/: CMakeCache.txt  Makefile  SemesterProjekt  cmake_install.cmake
build-SemesterProjekt-Imported_Kit_176f56-Default/SemesterProjekt_autogen/: mocs_compilation.cpp
pylon_openCV/: readme.txt
pylon_openCV/build-src-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  main  pylon_opencv.cbp
pylon_openCV/src/: CMakeLists.txt  FindPylon.cmake  main.cpp
test1/: main.cpp
(+23 files in other folders)
